k8s/apigateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  labels:
    app: apigateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway-deployment
  template:
    metadata:
      labels:
        app: apigateway-deployment
    spec:
      containers:
      - name: apigatewaycontainer
        image: api-gateway:1.0-local
        ports:
        - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
spec:
  type: NodePort
  selector:
    app: apigateway-deployment
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30001
