k8s/configservice.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-deployment
  labels:
    app: config-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-deployment
  template:
    metadata:
      labels:
        app: config-deployment
    spec:
      containers:
      - name: configservicecontainer
        image: config-service:1.0-local
        ports:
        - containerPort: 8888
---

apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  selector:
    app: config-deployment
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
