k8s/eurekaservice.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
  labels:
    app: eureka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-deployment
  template:
    metadata:
      labels:
        app: eureka-deployment
    spec:
      containers:
      - name: eurekaservicecontainer
        image: eureka-service:1.0-local
        ports:
        - containerPort: 8761
---

apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-deployment
  ports:
    - port: 8761
      targetPort: 8761
