k8s/goldysgym.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
      - name: frontendcontainer
        image: 123sabana/goldysgym-ui:1.0
        ports:
        - containerPort: 4200

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-deployment
  ports:
    - port: 4200
      targetPort: 4200
      nodePort: 30005
