k8s/mysql.yml
#Create a deployment by using the image pushed to Docker Hub
#Use containerPort 8081
#While creating the deployment, get the values from ConfigMap and secret and follow the below instructions
#Use the name as `GREETING` for the key which has to accessed from ConfigMap, which is used in the SpringBoot application
#Use the names as follows `MONGO_INITDB_ROOT_USERNAME` - username, `MONGO_INITDB_ROOT_PASSWORD` - password for the values access from secret
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deployment
  template:
    metadata:
      labels:
        app: mysql-deployment
    spec:
      containers:
      - name: mysqlcontainer
        image: mysql:latest
        ports:
        - containerPort: 3306
---


#Create the service of type NodePort and use the above created deployment as selector
#Use port 8081
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: my-deployment
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
