k8s/ticketservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-deployment
  labels:
    app: ticket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-deployment
  template:
    metadata:
      labels:
        app: ticket-deployment
    spec:
      containers:
      - name: ticketservicecontainer
        image: ticket-service:1.0-local
        ports:
        - containerPort: 8093
---

apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket-deployment
  ports:
    - port: 8093
      targetPort: 8093
      protocol: TCP
