k8s/userservice.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-deployment
  template:
    metadata:
      labels:
        app: user-deployment
    spec:
      containers:
      - name: userservicecontainer
        image: user-service:1.0-local
        ports:
        - containerPort: 8090
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-deployment
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
