k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: sabana.cochin.info
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 9000
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4200
